--- a/index.html
+++ b/index.html
@@ -12,11 +12,22 @@
 <div class="row">
     <div class="col">
         <h2>сюда вставить </h2>
+        <div id="editor">
+.row {
+    display: flex;
+    width: 1200px;
+    margin: auto;
+}
+.col {
+    margin: 10px;
+}
+        </div>
         <textarea name="sctipt" id="one" cols="50" rows="50"></textarea>
     </div>
 
     <div class="col">
         <h2>отсюда забрать </h2>
+        <div id="itog"></div>
         <textarea name="" id="itogo" cols="50" rows="50"></textarea>
     </div>
     <div class="col" id="rules">
