--- a/index.html
+++ b/index.html
@@ -12,29 +12,28 @@
 <div class="row">
     <div class="col">
         <h2>сюда вставить </h2>
-        <div id="editor">
+        <div class="editor" id="editor">
 .row {
+    color: red;
     display: flex;
-    width: 1200px;
     margin: auto;
+    width: 1200px;
 }
 .col {
     margin: 10px;
 }
         </div>
-        <textarea name="sctipt" id="one" cols="50" rows="50"></textarea>
+        <!--        <textarea name="sctipt" id="one" cols="50" rows="50"></textarea>-->
     </div>
 
     <div class="col">
         <h2>отсюда забрать </h2>
-        <div id="itog"></div>
-        <textarea name="" id="itogo" cols="50" rows="50"></textarea>
+        <div class="editor" id="itog"></div>
+        <!--        <textarea name="" id="itogo" cols="50" rows="50"></textarea>-->
     </div>
-    <div class="col" id="rules">
-
-    </div>
-
-    <script src="script.js"></script>
+    <div class="col" id="rules"></div>
+</div>
+<script src="script.js"></script>
 </div>
 </body>
 </html>
