--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
         <div class="editor" id="itog"></div>
         <!--        <textarea name="" id="itogo" cols="50" rows="50"></textarea>-->
     </div>
-    <div class="col" id="rules"></div>
 </div>
+<h2 id="buffer-ready" class="hidden">Скопировано и уже в буфере</h2>
+    <div class="col" id="rules"></div>
 <script src="script.js"></script>
 </div>
 </body>
