--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="col">
-        <h2>отсюда забрать </h2>
+        <h2 class="h2itog">отсюда забрать </h2>
         <div class="editor" id="itog"></div>
         <!--        <textarea name="" id="itogo" cols="50" rows="50"></textarea>-->
     </div>
